[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inst0100"
version = "0.1.0"
description = "UCL DIS module code for INST0100"
dependencies = [
    "numpy", 
    "pandas",
    "matplotlib"
]

[tool.setuptools]
# This tells setuptools to look for any folder with an __init__.py
packages = { find = { where = ["."], include = ["inst0100*"] } }
